src/test/ui/consts/const-eval/ub-int-array.32bit.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/ub-int-array.rs:16:9
   |
LL |         MaybeUninit { uninit: () }.init,
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ type validation failed: encountered uninitialized bytes, but expected initialized bytes

error[E0080]: evaluation of constant value failed
  --> $DIR/ub-int-array.rs:29:13
   |
LL |             MaybeUninit { uninit: () }.init,
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ type validation failed: encountered uninitialized bytes, but expected initialized bytes

error[E0080]: evaluation of constant value failed
  --> $DIR/ub-int-array.rs:53:13
   |
LL |             MaybeUninit { uninit: () }.init,
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ type validation failed: encountered uninitialized bytes, but expected initialized bytes

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0080`.
